feat: 实现管理员登录认证和密码管理功能
新增功能：
- 创建完整的登录认证系统，支持用户登录和会话管理
- 实现密码修改功能，支持安全更新管理员密码
- 添加路由中间件保护，自动验证用户登录状态
- 更新侧边栏用户信息显示，添加退出登录功能
- 创建专门的登录页面 UI，包含表单验证和错误提示
- 添加系统设置页面，支持用户信息查看和密码修改

技术实现：
- 使用 Cookie-based 认证机制
- 创建 AuthContext 上下文管理认证状态
- 实现 /api/auth/login 和 /api/auth/update-password API 路由
- 使用 Base64 编码存储密码（生产环境可升级为更安全的加密）
- 中间件自动重定向未登录用户到登录页面

默认账号：
用户名: admin
密码: admin123

文档更新：
- 更新 README.md 添加认证与安全章节
- 创建 AUTH_GUIDE.md 详细说明认证系统使用方法
- 更新 .env.example 添加认证相关配置

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,11 @@ NODE_ENV="production"
 
 # 日志级别
 LOG_LEVEL="info"
+
+# 认证配置
+# 默认管理员账号和密码（首次部署后请立即修改）
+ADMIN_USERNAME="admin"
+ADMIN_PASSWORD="admin123"
+
+# 会话配置
+SESSION_MAX_AGE="86400"
