fix: 修复Vercel部署时routes-manifest.json找不到的问题

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,11 @@
   "env": {
     "NEXT_TELEMETRY_DISABLED": "1"
   },
+  "build": {
+    "env": {
+      "NEXT_TELEMETRY_DISABLED": "1"
+    }
+  },
   "headers": [
     {
       "source": "/(.*)",
